--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@
 *.Rproj
 
 #html
-*data_analytics-gm_tables_prac.html
 
+data_analytics-gm_tables_prac.html
 # Session Data files
 .RData
 .RDataTmp
